--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 geopandas==1.1.1
 numpy==2.2.6
 pandas==2.3.3
+fastapi==0.104.1
+uvicorn==0.24.0
+streamlit==1.28.0
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+pydantic==2.5.0
